# file_scanner

./: Cargo.toml  file_teacher_state.json
src/: gui.rs  main.rs
src/controllers/: mod.rs
src/models/: mod.rs
src/views/: mod.rs
