[package]
name = "file_teacher"
version = "0.1.0"
edition = "2021"

[dependencies]
clap       = { version = "4.2", features = ["derive"] }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eframe     = "0.24"
egui       = "0.24"
rfd        = "0.10"

# <<< Ajout pour résoudre les imports winuser et windef >>>
[target.'cfg(windows)'.dependencies.winapi]
version  = "0.3"
features = ["winuser", "windef"]
